.provarCaches/00D5f000005vwGkEAI/objects/rstkf__customextf__c.object
<CustomObject>
    <fields>
        <fullName>rstkf__finreportmover_username__c</fullName>
        <inlineHelpText>Please enter user name for the organisation where template to be imported.</inlineHelpText>
        <label>User Name for the Org</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__finreportmover_variant__c</fullName>
        <label>Template Variant</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__fixedassetoptions__c</fullName>
        <description>fixedassetoptions</description>
        <label>Processing Option</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Periodic Depreciation</fullName>
                </value>
                <value>
                    <fullName>Forecast Deprecation</fullName>
                </value>
                <value>
                    <fullName>Alternative Book Depreciation</fullName>
                </value>
                <value>
                    <fullName>Just Post Periodic Depreciation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glbankacc_remainreconcile__c</fullName>
        <description>Remaining to Add/Reconcile</description>
        <inlineHelpText>Remaining to Add/Reconcile</inlineHelpText>
        <label>Remaining to Add/Reconcile</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankacc_stmtheader__c</fullName>
        <description>Statement Header</description>
        <inlineHelpText>Statement Header</inlineHelpText>
        <label>Statement Header</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbanktxn_txntype__c</fullName>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All Other Adjustments</fullName>
                </value>
                <value>
                    <fullName>Bank Fees/Service Charges</fullName>
                </value>
                <value>
                    <fullName>Bank Reports Credit Card Deposit</fullName>
                </value>
                <value>
                    <fullName>Bank Reports Credit Card Payment</fullName>
                </value>
                <value>
                    <fullName>Credit Card Processing Fee</fullName>
                </value>
                <value>
                    <fullName>Interest Income</fullName>
                </value>
                <value>
                    <fullName>Interest Expense</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glbnkacc_chargeamount__c</fullName>
        <description>Charge Amount</description>
        <inlineHelpText>The total amount of this transaction.</inlineHelpText>
        <label>Charge Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbnkacc_expenseaccount__c</fullName>
        <description>Expense Account</description>
        <inlineHelpText>This is the expense account associated with this transaction.</inlineHelpText>
        <label>Expense Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbnkacc_localcurrentbalance__c</fullName>
        <description>Current Balance</description>
        <inlineHelpText>This is the current balance of all the card transactions posted before this settlement transaction</inlineHelpText>
        <label>Current Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbnkacc_localpayment__c</fullName>
        <description>Payment Amount</description>
        <inlineHelpText>This is the amount to be paid to the Bank Card in settlement of the transactions raised. Partial settlements are allowed.</inlineHelpText>
        <label>Payment Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbnkacc_localtxndate__c</fullName>
        <description>Payment Txn Date</description>
        <inlineHelpText>This is the date upon which the Settlement amount will be recorded in the General Ledger. It can be overriden by the user</inlineHelpText>
        <label>Payment Txn Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__glbnkacc_totalSelectedRow__c</fullName>
        <description>Selected Row</description>
        <inlineHelpText>Selected Row</inlineHelpText>
        <label>Selected Row</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbnkacc_totalpayment__c</fullName>
        <description>Total Payment</description>
        <inlineHelpText>Total Payment for Selected Rows</inlineHelpText>
        <label>Total Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbnkacc_transactiontype__c</fullName>
        <inlineHelpText>This is the transaction type associated with this transaction. For e.g. values are ‘Interest Charge’, &apos;Balance Adjustment&apos;, etc.</inlineHelpText>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Interest Charge</fullName>
                </value>
                <value>
                    <fullName>Balance Adjustment</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous Bank Charge</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous Bank Credit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glbnkacc_txngroup__c</fullName>
        <description>Transaction Group</description>
        <inlineHelpText>Transaction Group</inlineHelpText>
        <label>Transaction Group</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbnkcard_balaftsettlement__c</fullName>
        <description>Balance after Settlement</description>
        <inlineHelpText>This is the Bank Card amount balance after Settlement. This should agree to the balance in the Associated GL Account (shown above).</inlineHelpText>
        <label>Balance after Settlement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glcloseproc_glcmp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Company for which this GL Close applies.</inlineHelpText>
        <label>Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>customextf (Company)</relationshipLabel>
        <relationshipName>customextf5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glcloseproc_glyear__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the Fiscal Year for which GL Close needs to be process.</inlineHelpText>
        <label>Fiscal Year</label>
        <referenceTo>rstkf__glyear__c</referenceTo>
        <relationshipLabel>customextf</relationshipLabel>
        <relationshipName>customextf01</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glcloseproc_period__c</fullName>
        <inlineHelpText>Select the Period for which GL Close need to be done (showing only those periods which are not closed yet).</inlineHelpText>
        <label>Period</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Template ID</label>
        <referenceTo>rstkf__glfstmplt1__c</referenceTo>
        <relationshipName>customexts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clone From Format</label>
        <referenceTo>rstkf__glfstmplt2__c</referenceTo>
        <relationshipLabel>customextf</relationshipLabel>
        <relationshipName>ZZ_customexts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clone from Line Header</label>
        <referenceTo>rstkf__glfstmplt4__c</referenceTo>
        <relationshipLabel>customextf</relationshipLabel>
        <relationshipName>customexts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gljd_accountTitle__c</fullName>
        <description>Account Title</description>
        <label>Account Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__gljd_totalCredits__c</fullName>
        <description>Total Credits</description>
        <inlineHelpText>Sum of all Credits from JE Detail lines</inlineHelpText>
        <label>Total Credits</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gljd_totalDebits__c</fullName>
        <description>Total Debits</description>
        <inlineHelpText>Sum of all Debits from JE Detail lines</inlineHelpText>
        <label>Total Debits</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gljetempltd_accountTitle__c</fullName>
        <description>Account Title</description>
        <label>Account Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__gljetempltd_totalCredits__c</fullName>
        <description>Total Credits</description>
        <label>Total Credits</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gljetempltd_totalDebits__c</fullName>
        <description>Total Debits</description>
        <label>Total Debits</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gljetemplthlist_totalCredits__c</fullName>
        <description>Total Credits</description>
        <label>Total Credits</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gljetemplthlist_totalDebits__c</fullName>
        <description>Total Debits</description>
        <label>Total Debits</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gljhlist_totalCredits__c</fullName>
        <description>Total Credits</description>
        <inlineHelpText>Sum of all Credits from JE Detail lines</inlineHelpText>
        <label>Total Credits</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gljhlist_totalDebits__c</fullName>
        <description>Total Debits</description>
        <inlineHelpText>Sum of all Debits from JE Detail lines</inlineHelpText>
        <label>Total Debits</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_allotheradjustments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All Other Adjustments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_alltranstypes__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Help</inlineHelpText>
        <label>Select All Transaction Types</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_apacheftfees__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AP ACH/EFT Fees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_apachpaym__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AP ACH Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_apcashpayment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AP Cash Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_apcheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AP Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_apcreditcard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AP Credit Card Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_apeftpaym__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AP EFT Payment (General)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_apothervoidedpaym__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AP Other Voided Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_appaymvarianceMC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AP Payment Variance, Multi-Currency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_appaymvarianceSC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AP Payment Variance, Single Currency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_apvoidedcheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AP Voided Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_aracheftpaymbybank__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AR ACH/EFT Payment Reported by Bank</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_arcashdeposit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AR Cash Deposit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_arcashdepositvarianceMC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AR Cash Deposit Variance, Multi-Curr</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_arcashdepositvarianceSC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AR Cash Deposit Variance, Single Curr</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_arcredcardpaym__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AR Credit Card Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_bankfeesservchrgs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bank Fees/Service Charges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_bankgentrans__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bank-Generated Transactions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_bankreportscredcarddeposit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bank Reports Credit Card Deposit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_bankreportscredcardpaym__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bank Reports Credit Card Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_begbankcurrcurrentbal__c</fullName>
        <label>Beginning Current Balance in Bank Curr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_beghomecurrcurrentbal__c</fullName>
        <label>Beginning Current Balance in Home Curr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_companygentrans__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Company-Generated Transactions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_deposittrans__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deposit Transactions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_dispcalcbal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Calculated Bank Balances</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_endbankcurrcurrentbal__c</fullName>
        <label>New Ending Current Balance in Bank Curr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_endbankcurrquerybal__c</fullName>
        <label>Ending Query Balance in Bank Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_endhomecurrcurrentbal__c</fullName>
        <label>New Ending Current Balance in Home Curr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_endhomecurrquerybal__c</fullName>
        <label>Ending Query Balance in Home Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_endingchecknum__c</fullName>
        <label>Ending Check Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_forbankdepreconcelfrmcash__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, also Query for Reconciliation and AR Cash Deposits from Individual Transactions sections are selected.</inlineHelpText>
        <label>Query Reconciling Bank Deposits frm Cash</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_forbankdepreconcelrepbybank__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, also Query for Reconciliation is auto selected. Also, AR Credit Card Payment, AR Cash Deposit Variance Single Curr, and AR Cash Deposit Variance Multi-Curr are auto checked.</inlineHelpText>
        <label>Query for Reconciling Deposits Reported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_forcheckreconcel__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, Query for Reconciliation is automatically selected, as well as AP Check and AP Voided Check in Individual Transactions section.</inlineHelpText>
        <label>Query for Check Reconciliation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_forotherpaymreconcel__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, Query for Reconciliation is automatically selected. Additionally, AP Check, AP Cash Payment, AP EFT Payment (General), AP ACH Payment, AP Credit Card Payment are automatically checked.</inlineHelpText>
        <label>Query for Other Payment Reconciliation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_forreconcel__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, this indicates that query is being made for bank reconciliation purposes.  One more relevant item needs to be selected in this section before clicking on Search button.</inlineHelpText>
        <label>Query for Reconciliation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_forreconcelrecbyJE__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, also Query for Reconciliation and Transfers/Adjustments Made by JE are auto-selected.</inlineHelpText>
        <label>Query Reconciling Transfers Rec by JE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_fromtransaction__c</fullName>
        <label>From Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_paymtrans__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment Transactions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_reconcileachpaymonquery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reconcile Unreconciled ACH Payments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_reconcilearcredcardpaymonqry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reconcile Unreconciled AR CC Payments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_reconcilecashdeponquery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reconcile Unreconciled Cash Deposits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_reconcilecashpaymonquery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reconcile Unreconciled Cash Payments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_reconcilechecksonquery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reconcile Unreconciled Checks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_reconcilecredcardpaymonquery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reconcile Unreconciled Credit Card paymt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_reconciledepositonqry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reconcile Unreconciled Deposits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_reconcileeftpaymonquery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reconcile Unreconciled EFT Payments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_reconcilepaymonquery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reconcile Unreconciled Payments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_reconciletransfadjmadeByJE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reconcile Unreconciled Transf/Adj by JE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_seltransbankcurrquerybal__c</fullName>
        <label>Sel Trans Query Balance in Bank Curr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_seltranshomecurrquerybal__c</fullName>
        <label>Sel Trans Query Balance in Home Curr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_singlechecknum__c</fullName>
        <label>Single Check Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_singlechecknumingrid__c</fullName>
        <label>Single Check Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_startbankcurrquerybal__c</fullName>
        <label>Starting Query Balance in Bank Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_starthomecurrquerybal__c</fullName>
        <label>Starting Query Balance in Home Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_startingchecknum__c</fullName>
        <label>Starting Check Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_throughtransaction__c</fullName>
        <label>Through Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_transdate__c</fullName>
        <inlineHelpText>Enter applicable Transaction Date to be used as the &quot;as-of&quot; date</inlineHelpText>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_transferadjustmentsmadebyJE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transfers/Adjustments Made by JE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_transfervariances__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transfer Variances</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glstmtntryd_accountTitle__c</fullName>
        <description>Account Title</description>
        <label>Account Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glstmtntryd_totalCredits__c</fullName>
        <description>Total Credits</description>
        <label>Total Credits</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glstmtntryd_totalDebits__c</fullName>
        <description>Total Debits</description>
        <label>Total Debits</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glstmtntryhList_totalCredits__c</fullName>
        <description>Total Credits</description>
        <label>Total Credits</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glstmtntryhList_totalDebits__c</fullName>
        <description>Total Debits</description>
        <label>Total Debits</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glstmtntryh_glcmp__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>glstmtntryh_glcmp__c</description>
        <label>Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>customextf (Company)</relationshipLabel>
        <relationshipName>customextf1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxndimconsolidate_cronexpression__c</fullName>
        <description>gltxndimconsolidate_cronexpression__c</description>
        <label>Cron Expression</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxndimconsolidate_scheduleName__c</fullName>
        <description>gltxndimconsolidate_scheduleName__c</description>
        <label>Schedule Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnsum_period__c</fullName>
        <description>gltxnsum_period</description>
        <label>Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__gltxnsummary_clearall__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Clear All Existing Before Rebuild</description>
        <label>Clear All Existing Before Rebuild</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnsummary_summarize_gltxn__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Summarize GL Transaction Data</description>
        <label>Summarize GL Transaction Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnsummary_summarize_sub_gltxn__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Summarize Subsidiary Company Transacti</description>
        <label>Summarize Subsidiary Company Txns</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__gti_endingbalance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Ending Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gti_fromdate__c</fullName>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__gti_glacct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the GL Account to be queried against</inlineHelpText>
        <label>GL Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>customextf (GL Account)</relationshipLabel>
        <relationshipName>customextf7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gti_glcmp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The applicable Financial Company</inlineHelpText>
        <label>Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>customextf (Company)</relationshipLabel>
        <relationshipName>customextf6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gti_gldiv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Optional filter to select only those GL Transactions associated with the Division entered</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstkf__gldiv__c</referenceTo>
        <relationshipLabel>customextf</relationshipLabel>
        <relationshipName>customextf</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gti_glproj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Optional filter to select only those GL Transactions associated with the Project entered</inlineHelpText>
        <label>Project</label>
        <referenceTo>rstkf__glproj__c</referenceTo>
        <relationshipLabel>customextf</relationshipLabel>
        <relationshipName>customextf</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gti_glyear__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the Fiscal Year for the GL Account entered to be queried against</inlineHelpText>
        <label>Fiscal Year</label>
        <referenceTo>rstkf__glyear__c</referenceTo>
        <relationshipLabel>customextf (Fiscal Year)</relationshipLabel>
        <relationshipName>customextf</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gti_icitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Optional filter to select only those GL Transactions associated with the Inventory Item entered</inlineHelpText>
        <label>Inventory Item</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>customextf</relationshipLabel>
        <relationshipName>customextf</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>